// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesComponent Layout should contain div wrapper if messages length more than 0 1`] = `
<div
  automation-id="wrapper"
  cy-automation-id="messages-wrapper"
  pw-automation-id="messages-wrapper"
>
  <h2
    automation-id="heading"
    cy-automation-id="messages-heading"
    pw-automation-id="messages-heading"
  >
     Messages 
  </h2>
  <button
    automation-id="clear-button"
    class="clear"
    cy-automation-id="messages-clear-button"
    pw-automation-id="messages-clear-button"
    type="button"
  >
     Clear messages 
  </button>
  <div
    automation-id="message"
    cy-automation-id="message"
    pw-automation-id="message"
  >
     test message 1 
  </div>
  <div
    automation-id="message"
    cy-automation-id="message"
    pw-automation-id="message"
  >
     test message 2 
  </div>
  
</div>
`;

exports[`MessagesComponent Layout should contain heading and clear button if messages length more than 0 1`] = `
<h2
  automation-id="heading"
  cy-automation-id="messages-heading"
  pw-automation-id="messages-heading"
>
   Messages 
</h2>
`;

exports[`MessagesComponent Layout should contain heading and clear button if messages length more than 0 2`] = `
<button
  automation-id="clear-button"
  class="clear"
  cy-automation-id="messages-clear-button"
  pw-automation-id="messages-clear-button"
  type="button"
>
   Clear messages 
</button>
`;

exports[`MessagesComponent Layout should contain messages list if messages length more than 0 1`] = `
<div
  automation-id="message"
  cy-automation-id="message"
  pw-automation-id="message"
>
   test message 1 
</div>
`;

exports[`MessagesComponent Layout should contain messages list if messages length more than 0 2`] = `
<div
  automation-id="message"
  cy-automation-id="message"
  pw-automation-id="message"
>
   test message 2 
</div>
`;

exports[`MessagesComponent Layout should contain messages list if messages length more than 0 3`] = `
<div
  automation-id="message"
  cy-automation-id="message"
  pw-automation-id="message"
>
   test message 3 
</div>
`;
